# pidpro

./: .gitignore  Cargo.toml  README.md  config.json  settings.db
.github/: copilot-instructions.md
examples/: demo_cycle_time.rs  test_controller_db.rs
src/: controller.rs  lib.rs  main.rs
src/boards/: esp32.rs  mod.rs  orangepi.rs  pfpwm.rs
src/boards/hal/: esp32_hal.rs  mod.rs  orangepi_hal.rs  rpi_hal.rs
src/controller/: mod.rs  pid.rs  pmode.rs
src/database/: mod.rs  sql.rs  sql_schema.rs
