[package]
name = "pidpro"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
embedded-hal = "0.2.7"
rppal = { version = "0.17.1", optional = true } 
esp-idf-hal = { version = "0.43.0", optional = true }
# esp-idf-sys = { version = "0.34.0", features = ["binstart"], optional = true } 
sysfs_gpio = { version = "0.6.0", optional = true }
crossterm = "0.27"

# Add features for conditional compilation if a board needs specific system libraries
[features]
default = []
rpi = ["dep:rppal"]
esp32 = ["dep:esp-idf-hal"] # Potentially also dep:esp-idf-sys if not transitively included as needed
orangepi = ["dep:sysfs_gpio"] # Or a generic "linux_gpio" feature
